7 January 2022: Wouter
	- Merge #600 from pemensik: Change file mode before changing file
	  owner.

5 January 2022: Wouter
	- Fix for #596: fix that rpz return message is returned and not just
	  the rcode from the iterator return path. This fixes signal unset RA
	  after a CNAME.
	- Fix unit tests for rpz now that the AA flag returns successfully from
	  the iterator loop.
	- Fix for #596: add unit test for nsdname trigger and signal unset RA.
	- Fix for #596: add unit test for nsip trigger and signal unset RA.
	- Fix #598: Fix unbound-checkconf fatal error: module conf
	  'respip dns64 validator iterator' is not known to work.
	- Fix for #596: Fix rpz-signal-nxdomain-ra to work for clientip
	  triggered operation.

4 January 2022: Wouter
	- Fix #596: unset the RA bit when a query is blocked by an unbound
	  RPZ nxdomain reply. The option rpz-signal-nxdomain-ra allows to
	  signal that a domain is externally blocked to clients when it
	  is blocked with NXDOMAIN by unsetting RA.
	- Fix to add test for rpz-signal-nxdomain-ra.
	- Fix #596: only unset RA when NXDOMAIN is signalled.
	- Fix that RPZ does not set RD flag on replies, it should be copied
	  from the query.

22 December 2021: George
	- contrib/aaaa-filter-iterator.patch file renewed diff content to
	  apply cleanly to the current coderepo for the current code version.

20 December 2021: George
	- Fix #591: Unbound-anchor manpage links to non-existent license file.

13 December 2021: George
	- Add missing configure flags for optional features in the
	  documentation.
	- Fix Unbound capitalization in the documentation.

13 December 2021: Wouter
	- Fix to pick up other class local zone information before unlock.

10 December 2021: George
	- Allow local-data for classes other than IN to inherit a configured
	  local-zone's type if possible, instead of defaulting to type
	  transparent as per the implicit rule.

10 December 2021: Wouter
	- Add code similar to fix for ldns for tab between strings, for